--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,6 +2,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,14 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/adapter-pg": "^7.4.2",
-    "@prisma/client": "^7.4.2",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.14",
-    "pg": "^8.19.0",
-    "prisma": "^7.4.2"
+    "pg": "^8.19.0"
   }
 }
